# pytest-srcpaths

./: LICENSE  README.md  pyproject.toml  pytest_srcpaths.py  tox.ini
.github/workflows/: main.yml
tests/: conftest.py  test_pythonpath.py  test_srcpaths.py
